Story/ccls 2249 doc upload link (#224)
* story(ccls-2249): add document upload link logic

* story(ccls-2249): unit tests